--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.9",
     "@mui/styled-engine": "^5.10.8",
+    "@tabler/icons": "^1.104.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.30",
