--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
     "@mui/material": "^5.10.9",
     "@mui/styled-engine": "^5.10.8",
     "@tabler/icons": "^1.104.0",
+    "axios": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.30",
