--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "/app",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -6,6 +7,7 @@
     "@mui/styled-engine": "^5.10.8",
     "@tabler/icons": "^1.104.0",
     "axios": "^1.1.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-p5": "^1.3.30",
@@ -15,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH='../bin/frontend' react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
