完美的第一个2.0.0

--- a/window/package.json
+++ b/window/package.json
@@ -16,10 +16,10 @@
     "dist": "electron-builder --win --mac"
   },
   "dependencies": {
+    "about-window": "^1.15.2",
     "electron-fetch": "^1.9.1",
     "freeport": "^1.0.5"
   },
-
   "build": {
     "appId": "chimp3",
     "mac": {
